--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,650 @@
-.App {
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;600;700;900&display=swap');
+
+
+:root {
+  --color-gradient-dark: #0029AA;
+  --color-gradient-light: #5C82FA;
+  --color-span: #4083E7;
+  --color-border: #3771C8;
+  --color-background: #000000;
+  --color-text: #FFFFFF;
+}
+
+/* div {
+  border: 2px solid greenyellow;
+} */
+
+::-webkit-scrollbar {
+  width: .5em;
+}
+
+::-webkit-scrollbar-thumb {
+background: var(--color-gradient-dark);
+border-radius: .5em;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--color-border);
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+body {
+  font-family: 'Red Hat Display', sans-serif;
+  color: var(--color-text);
+  box-sizing: border-box;
+  background-color: #000000;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+h1 {
+  text-transform: uppercase;
+  line-height: 2.2rem;
+  font-size: 2.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h2 {
+  text-transform: uppercase;
+  line-height: 2rem;
+  font-size: 2rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h3 {
+  width: 80%;
+  font-size: 1.7vw
+}
+
+button {
+  background: linear-gradient(#0029AA, #5C82FA);
+  padding: 1em 2.5em;
+  border-radius: .8em;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1em;
+  border: none;
+}
+
+span {
+  color: var(--color-span);
+}
+
+footer {
+  height: 22vh;
+  background: linear-gradient(#000000, #0029AA);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+footer img {
+  width: 8em;
+  margin-bottom: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/*MAIN SECTION*/
+
+main {
+  background-image: url('./assets/sales_bg.png');
+  background-size: cover;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.main-div {
+  width: 33%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 3em;
+}
+
+.main-logo {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  margin-top: 5%;
+}
+
+.main-logo img {
+  width: 80%;
+}
+
+.main-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main-text p {
+  width: 80%;
+}
+
+.main-scroll {
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 2%;
+}
+
+.main-scroll img {
+  width: 80%;
+}
+
+/*SECOND SECTION*/
+
+.second {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5rem
+}
+
+.second-info-container {
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  margin: auto;
+  gap: 10rem;
+}
+
+.box {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.second-info-text {
+  width: 50%;
+  position: absolute;
+  top: 0;
+  font-size: 1vw;
+}
+
+.left-text {
+  margin-left: 1.5rem;
+}
+
+.right-text {
+  margin-right: 1.5rem;
+}
+
+#box-left-1,
+#box-left-3 {
+  text-align: left;
+  align-items: start;
+}
+
+#box-right-2,
+#box-right-4 {
+  text-align: right;
+  align-items: end;
+}
+
+/* LAST SECTION */
+
+.last {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 85%;
+  padding: 6rem 0;
+}
+
+.last-title {
+  margin-bottom: 10%;
+}
+
+.last-box-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 3vw;
+}
+
+.box-out {
+  background: linear-gradient(#3771C8, rgba(0,0,0,0));
+  width: 70%;
+  height: 10rem;
+  border-radius: .5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.box-in {
+  width: 99%;
+  height: 9.7rem;
+  background-color: #000000;
+  border-radius: .5em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.last-text {
+  width: 50%;
+  font-size: 1.5vw;
+  padding: 3rem 0;
+}
+
+.big-out {
+  background: linear-gradient(#3771C8, rgba(0,0,0,0));
+  width: 99vw;
+  height: 32vh;
+  border-radius: .5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.big-in {
+  width: 99.7%;
+  height: 31.7vh;
+  background-color: #000000;
+  border-radius: .5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.big-in h3 {
+  width: 60%;
+  font-size: 2.5vw;
+  margin-bottom: 0;
+}
+
+.big-in p {
+  font-size: 1.2vw;
+  background-color: var(--color-span);
+  font-weight: 600;
+  margin-bottom: 4%;
+}
+
+
+@media only screen and (max-width: 535px) {
+
+  /*MAIN SECTION*/
+
+  main {
+    background-image: url('./assets/mobile_bg.png');
+    background-size: contain;
+    background-repeat: no-repeat;
   }
-  to {
-    transform: rotate(360deg);
+
+  h1 {
+    font-size: 9vw;
+  }
+
+  h2 {
+    font-size: 8vw;
+  }
+
+  h3 {
+    font-size: 5vw;
+    margin: 0;
+  }
+
+  .main-div {
+    width: 85%;
+    gap: 1rem;
+  }
+
+  .main-logo {
+    margin-top: 10%;
+  }
+
+  .main-scroll {
+    margin-bottom: 5%;
+  }
+
+  .main-text p {
+    font-size: 3.7vw;
+  }
+
+  .main-text {
+    padding-bottom: 20%;
+  }
+
+  /* SECOND SECTION */
+
+  .second {
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem
+  }
+
+  .second-info-container {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    gap: 5rem;
+  }
+
+  .box {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .second-info-text {
+    width: 80%;
+    position: absolute;
+    top: 0;
+    font-size: 2.7vw;
+    margin-top: 1rem;
+  }
+
+  .left-text {
+    margin-left: 1rem;
+  }
+
+  .right-text {
+    margin-right: 1rem;
+  }
+
+  .second-info-text h2 {
+    margin-top: -2vw;
+    margin-bottom: -2vw;
+    font-size: 5vw
+  }
+
+  #box-right-2,
+  #box-right-4 {
+    align-items: end;
+  }
+
+  #box-left-1,
+  #box-left-3 {
+    align-items: start;
+  }
+
+  /* .mobile-after::after {
+    content: url('./assets/line.svg');
+    align-self: center;
+    margin-top: -.5vw;
+    margin-bottom: -1.5vw;
+  } */
+
+  /* LAST SECTION */
+  .last {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 85%;
+    padding: 6rem 0;
+  }
+
+  .last-title {
+    margin-bottom: 10%;
+  }
+
+  .last-box-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  
+  .box-out {
+    background: linear-gradient(#3771C8, rgba(0,0,0,0));
+    width: 70%;
+    height: 18vh;
+    border-radius: .5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .box-in {
+    width: 99%;
+    height: 17.8vh;
+    background-color: #000000;
+    border-radius: .5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .last-text {
+    width: 90%;
+    font-size: 4vw;
+    padding: 3rem 0;
+  }
+
+  .big-out {
+    background: linear-gradient(#3771C8, rgba(0,0,0,0));
+    height: 32vh;
+    border-radius: .5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .big-in {
+    width: 99%;
+    height: 31.7vh;
+    background-color: #000000;
+    border-radius: .5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .big-in p {
+    font-size: .8rem;
+    background-color: var(--color-span);
+    font-weight: 600;
+  }
+
+  .last button {
+    margin-top: 3%;
+  }
+
+  /* FOOTER */
+
+  footer img {
+    width: 30%
+  }
+}
+
+@media only screen and (min-width: 535px) and (max-width: 1080px) {
+  main {
+    background-size: cover;
+  }
+
+  .main-div {
+    width: 60%;
+  }
+
+  .main-logo {
+    margin-top: 15%;
+  }
+
+  h1 {
+    font-size: 7vw;
+    line-height: 7vw;
+  }
+
+  h2 {
+    font-size: 8vw;
+    line-height: 8vw;
+  }
+
+  h3 {
+    font-size: 5vw;
+    margin: 0;
+  }
+
+  .second {
+    margin-top: 5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 5rem
+  }
+
+  .second-info-container {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    gap: 5rem;
+  }
+
+  .box {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .second-info-text {
+    width: 55%;
+    position: absolute;
+    top: 0;
+    font-size: 1.7vw;
+    margin-top: 1rem;
+  }
+
+  .left-text {
+    margin-left: 0;
+  }
+
+  .right-text {
+    margin-right: 0;
+  }
+
+  .second-info-text h2 {
+    margin-top: -2vw;
+    margin-bottom: -2vw;
+    font-size: 3.5vw
+  }
+
+  #box-right-2,
+  #box-right-4 {
+    align-items: center;
+  }
+
+  #box-left-1,
+  #box-left-3 {
+    align-items: center;
+  }
+
+  /* .mobile-after::after {
+    content: url('./assets/line.svg');
+    align-self: center;
+    margin-top: -.3vw;
+    margin-bottom: -1vw
+  } */
+
+  .last {
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 85%;
+    padding: 6rem 0;
+  }
+
+  .last-title {
+    margin-bottom: 10%;
+  }
+
+  .last-box-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  
+  .box-out {
+    background: linear-gradient(#3771C8, rgba(0,0,0,0));
+    width: 70%;
+    height: 18vh;
+    border-radius: .5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .box-in {
+    width: 99%;
+    height: 17.8vh;
+    background-color: #000000;
+    border-radius: .5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .box-in h3 {
+    font-size: 4vw;
+  }
+
+  .last-text {
+    width: 90%;
+    font-size: 2.5vw;
+    padding: 3rem 0;
+  }
+
+  .big-out {
+    background: linear-gradient(#3771C8, rgba(0,0,0,0));
+    height: 32vh;
+    border-radius: .5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .big-in {
+    width: 99%;
+    height: 31.7vh;
+    background-color: #000000;
+    border-radius: .5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .big-in p {
+    font-size: .8rem;
+    background-color: var(--color-span);
+    font-weight: 600;
+  }
+
+  .last h2 {
+    font-size: 5vw;
+  }
+
+  .last button {
+    margin-top: 3%;
   }
 }
