--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,7 @@ main {
 
 .second-info-text {
   width: 50%;
+  height: 100%;
   position: absolute;
   top: 0;
   font-size: 1vw;
@@ -349,6 +350,7 @@ main {
 
   .second-info-text {
     width: 80%;
+    height: 100%;
     position: absolute;
     top: 0;
     font-size: 2.7vw;
@@ -525,6 +527,7 @@ main {
 
   .second-info-text {
     width: 55%;
+    height: 100%;
     position: absolute;
     top: 0;
     font-size: 1.7vw;
