--- a/src/App.css
+++ b/src/App.css
@@ -148,51 +148,125 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 5rem
+  gap: 5vw;
 }
 
-.second-info-container {
-  display: flex;
-  flex-direction: column;
-  width: 60%;
+.box-wrapper {
+  width: 80%;
   margin: auto;
-  gap: 10rem;
-}
-
-.box {
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  gap: 6vw;
+  position: relative;
 }
 
-.second-info-text {
-  width: 50%;
-  height: 100%;
+.box-left {
+  background-image: url('./assets/box_l.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 47%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  height: 18vw;
+  align-self: self-start;
+}
+
+
+.box-right {
+  background-image: url('./assets/box_r.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 46.1%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-items: end;
+  height: 17.4vw;
+  align-self: self-end;
+}
+
+.box-left-text {
+  width: 75%;
+  height: 85%;
+  top: 1;
+  left: 0;
   position: absolute;
-  top: 0;
-  font-size: 1vw;
-}
-
-.left-text {
-  margin-left: 1.5rem;
-}
-
-.right-text {
-  margin-right: 1.5rem;
-}
-
-#box-left-1,
-#box-left-3 {
+  display: flex;
+  flex-direction: column;
+  margin-left: 20px;
   text-align: left;
-  align-items: start;
 }
 
-#box-right-2,
-#box-right-4 {
+.box-right-text {
+  width: 75%;
+  height: 85%;
+  top: 1;
+  right: 0;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  margin-right: 25px;
   text-align: right;
-  align-items: end;
+}
+
+.box-left-text h2,
+.box-right-text h2 {
+  text-transform: uppercase;
+  font-size: 2.2vw;
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.box-left-text p,
+.box-right-text p {
+  font-size: 1.3vw;
+  margin-top: 0;
+}
+
+span {
+  color: #4083E7;
+}
+
+.left-right-line::after {
+  content: '';
+  width: 10px;
+  position: absolute;
+  background-color: #4083E7;
+  height: .3vw;
+  width: 65%;
+  left: 100%;
+}
+
+.right-top-line::before {
+  content: '';
+  height: 87.5%;
+  width: .3vw;
+  background-color: #4083E7;
+  position: absolute;
+  top: -87.5%;
+  left: 51%;
+}
+
+.right-left-line::after {
+  content: '';
+  width: 10px;
+  position: absolute;
+  background-color: #4083E7;
+  height: .3vw;
+  width: 65%;
+  right: 100%;
+}
+
+.left-top-line::before {
+  content: '';
+  width: .3vw;
+  height: 82%;
+  background-color: #4083E7;
+  position: absolute;
+  bottom: 100%;
+  left: 51%
 }
 
 /* LAST SECTION */
@@ -330,64 +404,68 @@ main {
     margin-top: 5rem;
     display: flex;
     flex-direction: column;
-    gap: 5rem
-  }
-
-  .second-info-container {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
     gap: 5rem;
   }
 
-  .box {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+  .box-wrapper {
+    width: 100%;
+    gap: 11vw;
+}
 
-  .second-info-text {
-    width: 80%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    font-size: 2.7vw;
-    margin-top: 1rem;
-  }
+.box-left {
+    align-self: auto;
+    width: 75%;
+    height: 36vw;
+}
 
-  .left-text {
-    margin-left: 1rem;
-  }
+.box-right {
+    align-self: auto;
+    width: 75%;
+    height: 36vw;
+}
 
-  .right-text {
-    margin-right: 1rem;
-  }
+.left-right-line::after,
+.right-left-line::after {
+    display: none;
+}
 
-  .second-info-text h2 {
-    margin-top: -2vw;
-    margin-bottom: -2vw;
-    font-size: 5vw
-  }
+.right-top-line::before {
+    height: 31%;
+    top: -31%;
+    width: .8vw;
+}
 
-  #box-right-2,
-  #box-right-4 {
-    align-items: end;
-  }
+.left-top-line::before {
+    height: 31%;
+    width: .8vw;
+}
 
-  #box-left-1,
-  #box-left-3 {
-    align-items: start;
-  }
+.box-left-text,
+.box-right-text {
+  justify-content: space-around;
+}
 
-  /* .mobile-after::after {
-    content: url('./assets/line.svg');
-    align-self: center;
-    margin-top: -.5vw;
-    margin-bottom: -1.5vw;
-  } */
+.box-left-text h2,
+.box-right-text h2 {
+    font-size: 4.5vw;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding: 0;
+}
+
+.box-left-text p,
+.box-right-text p {
+    font-size: 2.5vw;
+    margin-top: 0
+}
+
+.box-right-text {
+    margin-right: 20px;
+}
+
+.box-left-text {
+    margin-left: 15px;
+}
 
   /* LAST SECTION */
   .last {
@@ -514,61 +592,65 @@ main {
     gap: 5rem
   }
 
-  .second-info-container {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
-    gap: 5rem;
-  }
+  .box-wrapper {
+    width: 100%;
+    gap: 11vw;
+}
 
-  .box {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
+.box-left {
+    align-self: auto;
+    width: 75%;
+    height: 36vw;
+}
 
-  .second-info-text {
-    width: 55%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    font-size: 1.7vw;
-    margin-top: 1rem;
-  }
+.box-right {
+    align-self: auto;
+    width: 75%;
+    height: 36vw;
+}
 
-  .left-text {
-    margin-left: 0;
-  }
+.left-right-line::after,
+.right-left-line::after {
+    display: none;
+}
 
-  .right-text {
-    margin-right: 0;
-  }
+.right-top-line::before {
+    height: 31%;
+    top: -31%;
+    width: .8vw;
+}
 
-  .second-info-text h2 {
-    margin-top: -2vw;
-    margin-bottom: -2vw;
-    font-size: 3.5vw
-  }
+.left-top-line::before {
+    height: 31%;
+    width: .8vw;
+}
 
-  #box-right-2,
-  #box-right-4 {
-    align-items: center;
-  }
+.box-left-text,
+.box-right-text {
+  justify-content: space-around;
+}
 
-  #box-left-1,
-  #box-left-3 {
-    align-items: center;
-  }
+.box-left-text h2,
+.box-right-text h2 {
+    font-size: 4.5vw;
+    margin-bottom: 0;
+    margin-top: 0;
+    padding: 0;
+}
 
-  /* .mobile-after::after {
-    content: url('./assets/line.svg');
-    align-self: center;
-    margin-top: -.3vw;
-    margin-bottom: -1vw
-  } */
+.box-left-text p,
+.box-right-text p {
+    font-size: 2.5vw;
+    margin-top: 0
+}
+
+.box-right-text {
+    margin-right: 20px;
+}
+
+.box-left-text {
+    margin-left: 15px;
+}
 
   .last {
     margin: auto;
