--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ body {
 
 h1 {
   text-transform: uppercase;
-  line-height: 2.2rem;
+  line-height: 3rem;
   font-size: 2.5rem;
 }
 
@@ -220,8 +220,15 @@ main {
   margin-top: 0;
 }
 
+
+#protecao{
+  background-color: #4083E7;
+  box-sizing: border-box;
+
+}
+
 span {
-  color: #4083E7;
+  color: #FFFFFF;
 }
 
 .left-right-line::after {
@@ -361,6 +368,7 @@ span {
 
   h1 {
     font-size: 9vw;
+    line-height: 3rem;
   }
 
   h2 {
@@ -558,7 +566,8 @@ span {
 
   h1 {
     font-size: 7vw;
-    line-height: 7vw;
+    /* line-height: 7vw; */
+    line-height: 5rem;
   }
 
   h2 {
